--- a/PROPIEDADES-DE-UN-ELEMENTO-GRID/index.html
+++ b/PROPIEDADES-DE-UN-ELEMENTO-GRID/index.html
@@ -1,5 +1,3 @@
-<!-- Propiedades de los items o elementos que estan dentro de un contenedor de GRID -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,12 +6,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body class="container">
    
-    <header></header>
-    <aside></aside>
-    <main></main>
-    <footer></footer>
+    <header>Header</header>
+    <aside>Aside</aside>
+    <main>Main</main>
+    <footer>Footer</footer>
 
     
 </body>
